--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,28 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@use './assets/base';
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100%;
+  font-family: base.$font-family-primary;
+  background-image: base.$gradient-bg-light;
+  font-size: 14px;
+}
+header {
+  width: 100%;
+}
+main {
+  width: 100%;
+}
+a {
+  text-decoration: none;
+}
+
+@media (min-width: base.$media-desktop-breakpoint) {
+  body {
+    padding: 0 base.$desktop-body-padding;
+  }
+}
