--- a/src/components/WeatherTable/WeatherTable.module.scss
+++ b/src/components/WeatherTable/WeatherTable.module.scss
@@ -9,7 +9,9 @@
       padding: 20px 0;
       display: flex;
       border-bottom: 1px solid rgba(28, 33, 48, 0.05);
-
+      .data {
+        width: 100%;
+      }
   }
   }
 }
