Active navigation tabs

--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -3,7 +3,7 @@
 $font-family-primary: 'Roboto', sans-serif; //check
 
 $text-color-black:  hsl(0, 0%, 0%);
-$text-color-white: hsla(0, 0%, 100%, .8);
+$text-color-white: hsla(0, 0%, 100%, 1);
 $text-color-dark: #1c2130; // check
 $text-color-accent: hsla(217, 91%, 59%, 1); // check
 $text-color-secondary: #ff5c00; // check
