--- a/src/components/MenuHamburger/MenuHamburger.module.scss
+++ b/src/components/MenuHamburger/MenuHamburger.module.scss
@@ -29,20 +29,19 @@
   position: fixed;
   z-index: 100;
   background-color: inherit;
-  transition: max-height 0.3s ease-in-out;
-  max-width: 0;
+  transition: width 0.3s ease-in-out;
+  width: 0;
   max-height: 0;
   &.active {
     right: 0;
     top: 0;
     left: 0;
     bottom: 0;
-    max-width: 100%;
+    width: 100%;
     max-height: 100%;
     @media (min-width: base.$media-desktop-breakpoint) {
       top: base.$advertisement-height;
       width: 400px;
-      margin-left: auto;
     }
   }
   .nav_menu {
