--- a/src/components/LanguageSwither/LanguageSwither.module.scss
+++ b/src/components/LanguageSwither/LanguageSwither.module.scss
@@ -1,5 +1,35 @@
 @use '../../assets/base';
 
+.empty {
+  &,
+  .item,
+  .custom_radio {
+    all: unset;
+  }
+  .item {
+    cursor: pointer;
+    position: relative;
+    padding: 0 2px;
+    &:first-of-type:after {
+      content: '/';
+      display: inline;
+      padding-left: 3px;
+    }
+  }
+  .custom_radio {
+    &:checked {
+      position: absolute;
+      top: 0;
+      left: 2px;
+      bottom: 0;
+      width: 2ch;
+      border-bottom: 2px solid #414141;
+    }
+  }
+}
+
+
+// no usage
 .layout {
   font-size: 17px;
   font-weight: 500;
