--- a/src/components/MenuHamburger/MenuHamburger.module.scss
+++ b/src/components/MenuHamburger/MenuHamburger.module.scss
@@ -32,6 +32,7 @@
   transition: width 0.3s ease-in-out;
   width: 0;
   max-height: 0;
+  font-size: 1.1rem;
   &.active {
     right: 0;
     top: 0;
@@ -54,6 +55,8 @@
       margin-left: calc(100% - 48px);
     }
     .menu_icon {
+      width: 24px;
+      height: 24px;
       color: black;
     }
     ul {
