--- a/src/components/SideInfo/SideInfo.module.scss
+++ b/src/components/SideInfo/SideInfo.module.scss
@@ -1,5 +1,6 @@
 .side_info {
   width: 100px;
+  color: #777777;
   .time_info {
     height: 79px;
     .local_time {
@@ -23,5 +24,16 @@
         justify-content: space-between;
       }
     }
+  }
+  .forecast_titles {
+    padding: 0 0 0 5px;
+    line-height: 15px;
+  }
+  .forecast_titles p {
+    padding: 3px;
+    font-size: 13px;
+  }
+  .time {
+    color: #000000;
   }
 }
