--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -1,17 +1,17 @@
 // Variables for the theme colors and fonts used in this project
 
-$font-family-primary: 'Roboto', sans-serif; //check
+$font-family-primary: 'Roboto', sans-serif;
 
 $text-color-black:  hsl(0, 0%, 0%);
 $text-color-white: hsla(0, 0%, 100%, 1);
-$text-color-dark: #1c2130; // check
-$text-color-accent: hsla(217, 91%, 59%, 1); // check
-$text-color-secondary: #ff5c00; // check
-$text-color-grey-date: #7f8fac; // check
+$text-color-dark: #1c2130;
+$text-color-accent: hsla(217, 91%, 59%, 1);
+$text-color-secondary: #ff5c00;
+$text-color-grey-date: #7f8fac;
 
 
 $color-bg-light-primary: hsl(0, 0%, 100%);
-$color-bg-dark-accent: hsla(218, 45%, 10%, 1); // check
+$color-bg-dark-accent: hsla(218, 45%, 10%, 1);
 $color-bg-light-secondary: #f2f2f7;
 // TODO: виправити кольори для фону
 
@@ -54,7 +54,7 @@ $desktop-body-padding: 10vw;
 
 @mixin gradient_text($gradient) {
   background: $gradient;
-  background-clip: text;
+  // background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
