--- a/src/components/CurrentLocation/CurrentLocation.module.scss
+++ b/src/components/CurrentLocation/CurrentLocation.module.scss
@@ -1,3 +1,13 @@
 .location {
-  display: flex;
+  padding: 30px;
+  font-family: 'Tahoma', sans-serif;
+  h1 {
+    color: #333333;
+    letter-spacing: 1.8px;
+    margin-bottom: 15px;
+  }
+  p {
+    color: #727272;
+    letter-spacing: 1px;
+  }
 }
