add current weather - icon, temperature, description

--- a/src/components/CurrentLocation/CurrentLocation.module.scss
+++ b/src/components/CurrentLocation/CurrentLocation.module.scss
@@ -1,6 +1,6 @@
 .location {
   padding: 30px;
-  font-family: 'Tahoma', sans-serif;
+  font-family: 'Nortar', sans-serif;
   h1 {
     color: #333333;
     letter-spacing: 1.8px;
