comment unnecessary code, add components style

--- a/src/components/NavigationTab/NavigationTab.module.scss
+++ b/src/components/NavigationTab/NavigationTab.module.scss
@@ -9,7 +9,7 @@
   text-transform: capitalize;
   display: inline-block;
   margin: 0 28px 0 0;
-  color: base.$text-color-white;
+  color: base.$text-color-black;
 
 }
 .active_tab {
