--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   font-family: base.$font-family-primary;
   background-image: base.$gradient-bg-light;
   font-size: 14px;
