--- a/src/components/ShortForecastList/ShortForecastList.module.scss
+++ b/src/components/ShortForecastList/ShortForecastList.module.scss
@@ -1,6 +1,23 @@
 .short_forecast_list_container {
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
+  margin-top: 50px;
+  padding: 0;
 
+  .short_forecast_list_item {
+    list-style: none;
+    margin-bottom: 20px;
+    background-color: rgba(0, 0, 0, 0.15);
+    border-radius: 15px;
+    transition: max-height 2s ease 1s;
+
+    .hidden_element {
+      max-height: 0;
+      overflow: hidden;
+    }
+
+    &.active .hidden_element {
+      max-height: 100%;
+    }
+  }
 }
